// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`media 1`] = `
Map {
  "@media print" => Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(34, 197, 94, var(--w-bg-opacity))",
  },
}
`;

exports[`media 2`] = `
Map {
  "@media (min-width: 1000px) and (max-width: 2000px)" => Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(34, 197, 94, var(--w-bg-opacity))",
  },
}
`;

exports[`useMedia 1`] = `
Map {
  "@media print" => Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`useMedia 2`] = `
Map {
  "@media (min-width: 1000px) and (max-width: 2000px)" => Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`useVariant 1`] = `
Map {
  "span" => Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`useVariant 2`] = `
Map {
  "&:hover" => Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`variant 1`] = `
Map {
  "span" => Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(34, 197, 94, var(--w-bg-opacity))",
  },
}
`;

exports[`variant 2`] = `
Map {
  "&:hover" => Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(34, 197, 94, var(--w-bg-opacity))",
  },
}
`;
